--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-username: SA66668888
-password: 12345678
-time_ids: [3, 4, 5]
+username: SA21173024
+password: lover1999FCB
+time_ids: [7,8,9]
 people_number: 2
